# helix

./: Cargo.toml  README.md
benches/: alignment.rs
src/: lib.rs  main.rs
src/align/: cigar.rs  mod.rs  scoring.rs  sw.rs  sw_avx2.rs  sw_neon.rs
src/chain/: chain.rs  extend.rs  mod.rs  seed.rs
src/index/: build.rs  hash.rs  io.rs  kmer.rs  minimizer.rs  mod.rs
src/output/: bam.rs  mod.rs  sam.rs
src/paired/: insert.rs  mod.rs  pair.rs
src/seq/: encode.rs  fasta.rs  fastq.rs  mod.rs
src/util/: mod.rs  simd.rs
tests/: integration.rs
tests/fixtures/: small.fa  small.fq
