[package]
name = "helix"
version = "0.1.0"
edition = "2021"
authors = ["Katie"]
description = "DNA sequence aligner with SIMD acceleration"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
flate2 = "1.0"
memmap2 = "0.9"
parking_lot = "0.12"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "alignment"
harness = false

[profile.release]
lto = true
codegen-units = 1
